@@ -11,14 +11,7 @@ import java.util.regex.Pattern;
 @Getter
 @Setter
 public class AuxiliaryActions {
-
-    CharConstants charConstants = new CharConstants(new char[]{'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k',
-            'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z',},
-            new char[]{'а', 'б', 'в', 'г', 'д', 'е', 'ё', 'ж', 'з', 'и', 'й',
-                    'к', 'л', 'м', 'н', 'о', 'п', 'р', 'с', 'т', 'у', 'ф', 'х', 'ц', 'ч', 'ш', 'щ',
-                    'ъ', 'ы', 'ь', 'э', 'ю', 'я'},
-            new char[]{'1', '2', '3', '4', '5', '6', '7', '8', '9', '0'});
-
+    
     public char getCharCycle(int cycleCount, String[] arraysFromList) {
         char charString = arraysFromList[cycleCount].trim().charAt(cycleCount);
         return charString;
@@ -26,84 +19,55 @@ public class AuxiliaryActions {
 
     public List<List<?>> iterationByElementsStringArray(int counterArrStr, String[] arraysFromList) {
         List<List<?>> listLists = new LinkedList<>();
+        List<StringBuffer> resultLines = new LinkedList<>();
+        List<Float> resultFloatNumber = new LinkedList<>();
+        List<Integer> resultIntegerNumber = new LinkedList<>();
         while (counterArrStr < arraysFromList.length) {
             if (counterArrStr < arraysFromList.length - 1) {
                 var resultMethod = parseElementsLineFromArray(new StringBuffer(arraysFromList[counterArrStr]));
-                if(resultMethod.get(0) instanceof Integer){
-                    int k = 0;
-                    while (k < resultMethod.size()){
-                        resultMethod.get(k)
-                        k++;
-                    }
+                if (resultMethod != null && resultMethod.getFirst() instanceof Integer) {
+                    resultIntegerNumber.add((Integer) resultMethod.getFirst());
                 }
-                if(resultMethod.get(0) instanceof Float){
-                    listLists.add(resultMethod.add(Float.valueOf(String.valueOf(resultMethod.get(0)) + " ")));
+                if (resultMethod != null && resultMethod.getFirst() instanceof Float) {
+                    resultFloatNumber.add((Float) resultMethod.getFirst());
                 }
-                if(resultMethod.get(0) instanceof StringBuffer){
-                    listLists.add(resultMethod);
+                if (resultMethod != null && resultMethod.getFirst() instanceof StringBuffer) {
+                    resultLines.add((StringBuffer) resultMethod.getFirst());
                 }
                 counterArrStr++;
             }
             if (counterArrStr == arraysFromList.length - 1) {
-                parseElementsLineFromArray(new StringBuffer(arraysFromList[counterArrStr]), counterArrStr);
+                parseElementsLineFromArray(new StringBuffer(arraysFromList[counterArrStr]));
                 counterArrStr++;
             }
         }
+        listLists.add(resultLines);
+        listLists.add(resultIntegerNumber);
+        listLists.add(resultFloatNumber);
+        return listLists;
     }
 
-    private List<?> parseElementsLineFromArray(StringBuffer line, Integer... endArray) {
-        StringBuffer lineResult;
-        List<StringBuffer> resultLines = new LinkedList<>();
-        List<Integer> resultIntegerNumber = new LinkedList<>();
-        List<Float> resultFloatNumber = new LinkedList<>();
+    private List<?> parseElementsLineFromArray(StringBuffer line) {
         //Перебрать строку в цикле
         if (String.valueOf(line).contains(".")) {
-
+            List<Float> resultFloat = new LinkedList<>();
+            resultFloat.add(Float.valueOf(String.valueOf(line)));
+            return resultFloat;
         }
-        Pattern pattern = Pattern.compile(new String("[A-Я]"));
+        Pattern pattern = Pattern.compile(new String("[а-яА-Яa-zA-Z]"));
         Matcher matcher = pattern.matcher(String.valueOf(line.charAt(0)));
-        /*for (int i = 0; i < line.length(); i++) {
-            if (String.valueOf(line).contains(".")) {
-                if (endArray == null) {
-                    resultFloatNumber.add(Float.valueOf(String.valueOf(line.append("\n"))))
-                    return resultFloatNumber;
-                }
-                if (endArray != null) {
-                    resultFloatNumber.add(Float.valueOf(String.valueOf(line)));
-                    return resultFloatNumber;
-                }
-            } else {
-                lineResult = cycleEngAlphapet(line, i);
-                if (endArray == null && lineResult != null) {
-                    resultLines.add(lineResult.append("\n"));
-                    return resultLines;
-                }
-                if (endArray != null && lineResult != null) {
-                    resultLines.add(lineResult);
-                    return resultLines;
-                }
-                lineResult = cycleRusAlphapet(line, i);
-                if (endArray == null && lineResult != null) {
-                    resultLines.add(lineResult.append("\n"));
-                    return resultLines;
-                }
-                if (endArray != null && lineResult != null) {
-                    resultLines.add(lineResult);
-                    return resultLines;
-                }
-                lineResult = cycleInteger(line, i);
-                if (endArray == null && lineResult != null) {
-                    resultIntegerNumber.add(Integer.valueOf(
-                            String.valueOf(lineResult.append("\n"))));
-                    return resultIntegerNumber;
-                }
-                if (endArray != null && lineResult != null) {
-                    resultIntegerNumber.add(Integer.valueOf(
-                            String.valueOf(lineResult)));
-                    return resultIntegerNumber;
-                }
-            }
-        }*/
+        if (matcher.find()) {
+            List<StringBuffer> resultLines = new LinkedList<>();
+            resultLines.add(line);
+            return resultLines;
+        }
+        pattern = Pattern.compile(new String("[0-9]"));
+        matcher = pattern.matcher(String.valueOf(line.charAt(0)));
+        if (matcher.find()) {
+            List<Integer> resultIntegerNumber = new LinkedList<>();
+            resultIntegerNumber.add(Integer.valueOf(String.valueOf(line)));
+            return resultIntegerNumber;
+        }
         return null;
     }
 
@@ -129,7 +93,7 @@ public class AuxiliaryActions {
         return null;
     }
 
-    private StringBuffer cycleInteger(StringBuffer line, int i) { // Дуб1.783.
+    private StringBuffer cycleInteger(StringBuffer line, int i) { //
         int k = 0;
         while (k < charConstants.arabicNumbers().length) {
             if (line.charAt(i) == charConstants.arabicNumbers()[k]) {
